--- a/style.css
+++ b/style.css
@@ -5,19 +5,40 @@
   --accClr: #0D0D35;
 }
 
-html,body{
+html, body {
+  margin: 0;
+  padding: 0;
   height: 100%;
   background-color: black;
 }
 
-header,footer{
+header, footer {
+  margin: 0;
+  padding: 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 30px 20px;
+}
+
+#gameCanvas { 
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  flex: 1;
+  width: 100%;
+  height: 100%;
 }
 
 main {
-  flex: 1;
   display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 0vh;
+  overflow: auto; /* Enable scrolling */
+  scrollbar-width: none; /* Firefox */
+}
+
+main::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
 }
